Overflow dropdown fixes

--- a/wp-content/themes/makeblog/less/make/nav-flyout.less
+++ b/wp-content/themes/makeblog/less/make/nav-flyout.less
@@ -13,11 +13,11 @@
     width: 360px;
     padding-top: 10px;
     height: 90vh;
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: hidden;
   }
   .container {
     position: relative;
-    overflow-x: hidden;
     height: 100%;
   }
   .nav-flyout-logo {
